<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/menu_refresh"
        android:checkable="false"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_scan"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_scan"/>
    <item
        android:id="@+id/menu_stop"
        android:orderInCategory="101"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_stop"/>
</menu>
