<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dysen.type.about.CompanyIntroActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include
            android:id="@+id/item_header"
            layout="@layout/item_top" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_middle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/blg">
        <!--1、android:lineSpacingExtra
        设置行间距，如”3dp”。
        2、android:lineSpacingMultiplier
        设置行间距的倍数，如”1.2″。-->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/company_about"
        android:lineSpacingExtra="4dp"
        android:lineSpacingMultiplier="2"
        android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="left"
                android:text="电话："
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_tel"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/company_tel"
                android:textColor="#d0e0"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_about2"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include
            android:id="@+id/item_header"
            layout="@layout/item_bottom" />
    </LinearLayout>

</LinearLayout>
